[package]
name = "rust-bittorrent"
version = "0.1.0"
authors = ["Mochivi"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_json = "1.0.105"                                             # for json mangling
